--- a/pyproject.toml
+++ b/pyproject.toml
@@ -33,6 +33,30 @@ dev = [
     "flake8>=6.0.0",
 ]
 
+[tool.hatch.build.targets.wheel]
+packages = ["api_utils", "browser_utils", "config", "logging_utils", "models", "stream"]
+include = [
+    "api_utils/**/*.py",
+    "browser_utils/**/*.py",
+    "config/**/*.py",
+    "logging_utils/**/*.py",
+    "models/**/*.py",
+    "stream/**/*.py",
+    "*.py",
+    "*.md",
+    "*.css",
+    "*.js",
+    "*.html",
+    "*.txt",
+    "*.json",
+    "*.yml",
+    "*.yaml",
+    "*.conf",
+    "docker/**/*",
+    "scripts/**/*",
+    "docs/**/*"
+]
+
 [build-system]
 requires = ["hatchling"]
 build-backend = "hatchling.build"
